# QuickLook.Next

./: .gitignore  Directory.Build.props  QuickLook.Next.slnx  README.md  README_CN.md  agent.md
.github/workflows/: beta-release.yml  ci.yml  package-release.yml  release.yml
docs/: format-registry.json  handle-based-preview-inputs.md  image-color-management.md  image-native-codecs.md  implementation-todo.md  long-cycle-harness.md  long-cycle-targets.md  optimization-roadmap.md  post-office-roadmap.md  prd-next-preview-optimization.md  review-readiness.md
native/quicklook_next_native/: Cargo.toml
native/quicklook_next_native/src/: lib.rs  preview.rs
packaging/: AppxManifest.xml  Install-ZH-CN.cmd  Install.cmd  Install.ps1  QuickLook.Next-Release.cer  README.txt
plugins/QuickLook.Next.Plugin.Archive/: ArchiveProvider.cs  FolderProvider.cs  QuickLook.Next.Plugin.Archive.csproj  archive.plugin.json  folder.plugin.json
plugins/QuickLook.Next.Plugin.Image/: ImageProvider.cs  QuickLook.Next.Plugin.Image.csproj  image.plugin.json
plugins/QuickLook.Next.Plugin.Info/: InfoProvider.cs  QuickLook.Next.Plugin.Info.csproj  info.plugin.json
plugins/QuickLook.Next.Plugin.Text/: QuickLook.Next.Plugin.Text.csproj  TextProvider.cs  text.plugin.json
src/QuickLook.Next.App/: AnimatedImagePreviewPresenter.cs  App.xaml  App.xaml.cs  AppSettings.cs  AppStartupTiming.cs  AutoStart.cs  CompositionInterop.cs  ExifMapLocation.cs  ExifPreviewPresenter.cs  FirstRunExperience.cs  HostProcessJob.cs  HostProcessLauncher.cs  ImageFilmstripItem.cs  ImageFilmstripPlanner.cs  ImageSidecarController.cs  ImageThumbnailCache.cs  ImageWaveformPresenter.cs  ListingPreviewPresenter.cs  ListingRow.cs  MainWindow.xaml  MainWindow.xaml.cs  MediaPreviewPresenter.cs  NativeBridge.cs  NativeThumbnailPriority.cs  Program.cs  (+26 more)
tools/: generate-icons.ps1  guard-architecture.ps1  guard-format-registry.ps1  guard-image-corpus.ps1  guard-performance-bounds.ps1  guard-stale-callbacks.ps1  guard-thumbnail-priority.ps1  harness-long-cycle.ps1  new-release-metadata.ps1  new-release-notes.ps1  pack-msix.ps1  pack-release.ps1  release.ps1  report-image-capabilities.ps1  resize-icons.ps1  resolve-auto-release.ps1  setup-release-signing.ps1  smoke-exif-map.ps1  smoke-image-corpus.ps1  smoke-native.ps1  smoke-restricted-host-launch.ps1  smoke-system-image-corpus.ps1  test-installer-script.ps1  test-pack-msix-version.ps1  test-pack-release-failfast.ps1  test-release-artifacts.ps1  test-release-notes.ps1  test-release-target.ps1  test-release-version.ps1  test-release-workflows.ps1  test-taskbar-icon-assets.ps1
(+68 files in other folders)
