[package]
name = "quicklook_next_native"
version = "0.1.0"
edition = "2021"
description = "QuickLook Next native layer: global hotkey state machine, Explorer selection, Win32/Shell/COM."

[lib]
name = "quicklook_next_native"
crate-type = ["cdylib"]

[profile.release]
opt-level = 2

[dependencies]
quick-xml = "0.36"
zip = "2.2"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
gif = "0.14"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell_PropertiesSystem",
]
